Saving progress on fix for SR-14228